# ChangeLog for sci-biology/mrbayes
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-biology/mrbayes/ChangeLog,v 1.21 2011/03/06 16:53:59 jlec Exp $

*mrbayes-3.1.2-r1 (06 Mar 2011)

  06 Mar 2011; Justin Lecher <jlec@gentoo.org> mrbayes-3.1.2.ebuild,
  +mrbayes-3.1.2-r1.ebuild:
  Fix for missing LDFLAGS, #338160

  01 Jan 2010; Christian Faulhammer <fauli@gentoo.org> mrbayes-3.1.2.ebuild:
  Transfer Prefix keywords

  11 Jun 2008; Kenneth Prugh <ken69267@gentoo.org> mrbayes-3.1.2.ebuild:
  amd64 stable, bug #213362

  17 Mar 2008; Donnie Berkholz <dberkholz@gentoo.org>; mrbayes-3.1.2.ebuild:
  (#213362) Keyword ~amd64.

  25 Mar 2007; Danny van Dyk <kugelfang@gentoo.org> mrbayes-3.1.2.ebuild:
  QA: Cleaned up whitespaces. Removed redundant src_compile().

  06 Jan 2007; Danny van Dyk <kugelfang@gentoo.org> -mrbayes-3.1.1.ebuild:
  QA: Removed unused versions.

  03 Nov 2006; Fabian Groffen <grobian@gentoo.org> mrbayes-3.1.1.ebuild,
  mrbayes-3.1.2.ebuild:
  Dropped ppc-macos, see you in prefix.

  14 Sep 2006; Olivier Fisette <ribosome@gentoo.org> metadata.xml:
  Stepping down from maintaining this package.

  12 Sep 2006; Olivier Fisette <ribosome@gentoo.org> mrbayes-3.1.1.ebuild,
  mrbayes-3.1.2.ebuild:
  Removed amd64 keywords because of bad pointer arithmetics causing segfaults
  in the sumt function on all 64 bit architectures (see bug #143094).

  09 Jul 2006; Donnie Berkholz <dberkholz@gentoo.org>; mrbayes-3.1.2.ebuild:
  x86 stable.

*mrbayes-3.1.2 (03 Feb 2006)

  03 Feb 2006; Olivier Fisette <ribosome@gentoo.org>
  +files/mb_readline_312.patch, +mrbayes-3.1.2.ebuild:
  New version. Added readline support. Thanks to Paul van der Mark for his
  work on this ebuild.

  09 Jan 2006; Homer Parker <hparker@gentoo.org> mrbayes-3.1.1.ebuild:
  Marked ~amd64.

  09 Oct 2005; Olivier Fisette <ribosome@gentoo.org> -mrbayes-3.0.ebuild:
  Pruning old version.
